<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity2">
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="#E3E9EE"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Reg"
                android:textAlignment="center"
                android:textColor="#296085"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:textColorHint="#ffffff"
                android:hint="@string/name"
                android:layout_marginTop="20dp"
                android:padding="16dp" />

            <!-- Username Field -->
            <EditText
                android:id="@+id/usernameReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:textColorHint="#ffffff"
                android:hint="@string/user"
                android:padding="16dp" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/passwordReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text_background"
                android:textColorHint="#ffffff"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="16dp" />

            <!-- Login Button -->
            <Button
                android:id="@+id/Reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#296085"
                android:backgroundTintMode="add"
                android:padding="16dp"
                android:text="@string/signup"
                android:textColor="#ffffff"
                android:textColorHighlight="#8EA3B2" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>