<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="16dp">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="141dp"
        android:layout_height="91dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/exclude"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <!-- Login Form Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="#E3E9EE"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Username Field -->
            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:textColorHint="#ffffff"
                android:hint="@string/user"
                android:padding="16dp" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text_background"
                android:textColorHint="#ffffff"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="16dp" />

            <!-- Login Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#296085"
                android:backgroundTintMode="add"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textColorHighlight="#8EA3B2" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no"
        android:textAlignment="center"
        android:textColor="#296084"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginCard" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/Reg"
        android:textAlignment="center"
        android:textColor="#296084"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>