<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity3">


<!--    <com.google.android.gms.maps.MapView-->
<!--        android:id="@+id/mapView"-->
<!--        android:layout_width="395dp"-->
<!--        android:layout_height="686dp"-->
<!--        android:layout_marginTop="1dp"-->
<!--        android:layout_marginBottom="80dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#E3E9EE"
        app:cardCornerRadius="80dp"
        app:cardElevation="4dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/white_boarder"
            android:orientation="horizontal"
            android:padding="5dp"
            android:elevation="10dp"
            android:weightSum="100">


            <!-- Username Field -->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:text="@string/welcome"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="85"
                android:text="@string/userN"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="38dp"
                android:layout_height="42dp"
                android:layout_weight="10"
                android:background="#ffffff"
                app:srcCompat="@mipmap/settings2" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/boarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_directions" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/boarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/textView5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="90dp"
        android:text="@string/location"
        android:background="@drawable/white_boarder"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000000"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/saveCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#E3E9EE"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">



            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uid"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="match_parent"
                android:checked="false"
                android:layout_height="wrap_content"
                android:text="@string/togglebutton" />

            <!-- Username Field -->
            <EditText
                android:id="@+id/devicenameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:textColorHint="#ffffff"
                android:hint="@string/deviceName"
                android:padding="16dp" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/safeRangeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edit_text_background"
                android:textColorHint="#ffffff"
                android:hint="@string/safeDist"
                android:inputType="number"
                android:padding="16dp" />

            <!-- Login Button -->
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#296085"
                android:backgroundTintMode="add"
                android:padding="16dp"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textColorHighlight="#8EA3B2" />




        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>